--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -31,7 +31,7 @@
     /* justify-content: center;
     align-items: center; */
 
-    /* column-gap: 39px; */
+    column-gap: 39px;
     align-items: left;
     /* margin: 6px 40px 6px 40px; */
 }
