--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -41,10 +41,12 @@
     font-size: 20px;
 }
 
+.active {
+    font-weight: 600;
+    color: rgba(255, 255, 255, 1);
+}
+
 .header-nav nav a:hover {
     color: rgba(255, 255, 255, 1);
 }
-.header-nav nav a:active {
-    color: rgba(255, 255, 255, 1);
-    font-weight: 600;
-}
+
