--- a/src/styles/ErrorPage.css
+++ b/src/styles/ErrorPage.css
@@ -1,5 +1,26 @@
-.error {
+.error-message {
+    color: #FFFFFF;
+}
+
+.error-message h1 {
+    font-weight: bolder;
+    text-align: center;
+    font-size: 10.5rem;
+    margin: 0;
+}
+.error-message p {
+    color: #FFFFFF;
+    font-weight: bolder;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin: 0;
+}
+
+body { 
     display: flex;
     justify-content: center;
-    text-align: center;
+    align-items: center;
+    
+
 }
