--- a/src/styles/Body.css
+++ b/src/styles/Body.css
@@ -2,5 +2,9 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    padding: 100px 20px 20px 20px;
+    padding: 50px 20px 20px 20px;
+}
+
+hr {
+    color: white;
 }
