--- a/src/styles/ErrorPage.css
+++ b/src/styles/ErrorPage.css
@@ -1,5 +1,11 @@
 .error-message {
+    width: 100%;
+    height: 100vh;
     color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .error-message h1 {
@@ -15,12 +21,4 @@
     font-size: 1.5rem;
     font-weight: 400;
     margin: 0;
-}
-
-body { 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-
 }
