--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 .header {
     color: #FFFFFF;
@@ -14,8 +15,15 @@
     align-items: center;
 }
 
+.header-logo a {
+    font-size: 30px;
+    font-weight: 600;
+    margin: 0;
+    color: white;
+}
+
 .header-nav {
-    font-family: "Roboto Slab", serif;
+    font-family: "Space Mono", system-ui;
     display: flex;
 }
 
