--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -44,16 +44,21 @@
     /* margin: 6px 40px 6px 40px; */
 }
 
+/* .header-nav  {
+    display: flex;
+    flex-direction: row;
+} */
+
 .active {
-    font-weight: 600;
-    color: rgba(255, 255, 255, 1);
+    color: rgba(255, 255, 255, 1) !important;
 }
 
 .header-nav nav a {
     color: rgba(255, 255, 255, 0.56);
-    font-size: 20px;
+    font-size: 18px;
+    display: flex;
+    column-gap: 1rem;
 }
-
 
 .header-nav nav a:hover {
     color: rgba(255, 255, 255, 1);
