--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -1,10 +1,11 @@
 .welcome {
     display: flex;
     flex-direction: column;
+    row-gap: 12px;
 }
 .welcome-header h1 {
-    font-size: 32px;
-    font-weight: bold;
+    font-size: 55px;
+    font-weight: bolder;
     color: #FFFFFF;
     margin: 0;
 }
@@ -21,16 +22,27 @@
 }
 
 .welcome-description {
-    width: 65%;
-    flex-direction: row;
-    justify-content: flex-start;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
 }
 
+.welcome-description p {
+    margin: 0 0 1em 0;
+}
+
+
 .welcome-image {
-    width: 35%;
+    width: 40%;
 }
 .welcome-image img {
-    width: 210px;
-    height: 210px;
-    border-radius: 100%;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #FF6AC2;
+    border-radius: 8px;
+}
+.welcome-image img {
+    width: 250px;
+    height: 250px;
 }
